--- a/src/styles/styles-dark.css
+++ b/src/styles/styles-dark.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #333;
   color: #f7f7f7;
 }
@@ -23,4 +23,4 @@ body {
 #theme-toggle {
   background-color: #000000;
   color: #dadada;
-}
+} */
