--- a/src/styles/styles-light.css
+++ b/src/styles/styles-light.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   background-color: #ebebeb;
   color: #333;
 }
@@ -14,4 +14,4 @@ body {
 #theme-toggle {
   background-color: #fff;
   color: #333;
-}
+} */
