--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,7 @@ p {
 footer {
   text-align: center;
   margin-top: 30px;
+  padding: 0 0 16px;
 }
 
 #language-select {
@@ -158,7 +159,9 @@ footer {
   transform: translateX(30px);
 }
 
-.downloadBtn {
+
+
+/* .downloadBtn {
   display: inline-block;
   padding: 10px 20px;
   background-color: #007bff;
@@ -168,11 +171,34 @@ footer {
   transition: background-color 0.3s ease;
 
   position: fixed;
-  bottom: 0%;
-  transform: translateY(-50%);
+  bottom: 1rem;
   right: 1rem;
 
+} */
+
+/* .downloadBtn-container {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+} */
+.downloadBtn-container {
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 9999;
 }
+
+.downloadBtn-container .downloadBtn {
+  display: inline-block;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+
 
 .downloadBtn:hover {
   background-color: #0056b3;
@@ -198,6 +224,7 @@ footer {
 
 .app.light .project {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: #e7e7e7;
 }
 
 .app.light #language-select {
@@ -219,16 +246,16 @@ footer {
 
 /* Estilos para o tema dark */
 .app.dark {
-  background-color: #242933;
+  background-color: #0D1117;
   color: #f7f7f7;
 }
 
 .app.dark .navbar {
-  background-color: #2e3440;
+  background-color: #010409;
 }
 
 .app.dark .navbar ul li a {
-  color: #d6d6d6;
+  color: #e6edf3;
 }
 
 .app.dark .navbar ul li a:hover {
@@ -237,15 +264,16 @@ footer {
 
 .app.dark .project {
   box-shadow: 0 2px 5px rgba(255, 255, 255, 0.1);
+  background-color: #21262D;
 }
 
-.app.dark #language-select {
-  background-color: #000000;
+.app.dark #language-select {  
+  background-color: #303030;
   color: #dadada;
 }
 
 .app.dark #theme-toggle {
-  background-color: #000000;
+  background-color: #303030;
   color: #dadada;
 }
 
@@ -283,4 +311,16 @@ footer {
 
 .project-img{
   max-width: 800px;
+  border-radius: 8px;
 }
+
+@media (max-width: 768px) {
+  .project-img{
+    max-width: 100%;
+  }
+
+}
+
+
+
+
