improved mobile version adding burger to menu

--- a/src/App.css
+++ b/src/App.css
@@ -17,37 +17,7 @@ body {
   /* padding: 20px; */
 }
 
-.navbar {
-  background-color: #f2f2f2;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 16px;
-}
 
-.navbar ul {
-  list-style-type: none;
-  margin: 0 5rem;
-  padding: 0;
-  display: flex;
-  align-items: center;
-}
-
-.navbar ul li {
-  margin-right: 16px;
-}
-
-.navbar ul li a {
-  color: #333;
-  text-decoration: none;
-}
-
-.navbar-buttons {
-  display: flex;
-  align-items: center;
-  margin-left: auto;
-  margin-right: 5rem;
-}
 
 #language-select {
   margin-right: 16px;
@@ -220,17 +190,6 @@ footer {
   color: #333;
 }
 
-.app.light .navbar {
-  background-color: #ffffff;
-}
-
-.app.light .navbar ul li a {
-  color: #2c2c2c;
-}
-
-.app.light .navbar ul li a:hover {
-  color: #7db8e8;
-}
 
 .app.light .project {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
@@ -265,18 +224,6 @@ footer {
 .app.dark {
   background-color: #0D1117;
   color: #f7f7f7;
-}
-
-.app.dark .navbar {
-  background-color: #010409;
-}
-
-.app.dark .navbar ul li a {
-  color: #e6edf3;
-}
-
-.app.dark .navbar ul li a:hover {
-  color: #7db8e8;
 }
 
 .app.dark .project {
@@ -337,7 +284,15 @@ footer {
   .project-img{
     max-width: 100%;
   }
+  main,
+section {
+  max-width: auto;
+  margin: 0 1rem;
+}
 
+section {
+  margin: 15px;
+}
 }
 
 
