--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,4 +1,36 @@
-ul li a{
+.navbar {
+  background-color: #f2f2f2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 16px;
+}
+
+.navbar ul {
+  list-style-type: none;
+  margin: 0 5rem;
+  padding: 0;
+  display: flex;
+  align-items: center;
+}
+
+.navbar ul li {
+  margin-right: 16px;
+}
+
+.navbar ul li a {
+  color: #333;
+  text-decoration: none;
+}
+
+.navbar-buttons {
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  margin-right: 5rem;
+}
+
+ul li a {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,8 +44,106 @@ ul li a{
   background-color: #0D1117;
 } */
 
-ul li a svg{
+ul li a svg {
   margin-right: 5px;
 }
 
+/* Theme light */
 
+.app.light .navbar {
+  background-color: #ffffff;
+}
+
+.app.light .navbar ul li a {
+  color: #2c2c2c;
+}
+
+.app.light .navbar ul li a:hover {
+  color: #7db8e8;
+}
+
+/* Theme dark */
+
+.app.dark .navbar {
+  background-color: #010409;
+}
+
+.app.dark .navbar ul li a {
+  color: #e6edf3;
+}
+
+.app.dark .navbar ul li a:hover {
+  color: #7db8e8;
+}
+
+@media (max-width: 768px) {
+  .navbar-burger {
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+    padding: 5px;
+  }
+
+  .navbar-burger .line {
+    background-color: #333;
+    height: 3px;
+    transition: all 0.2s ease-in-out;
+  }
+
+  .navbar-burger .line.active:nth-child(1) {
+    transform: rotate(45deg) translate(5px, 5px);
+  }
+
+  .navbar-burger .line.active:nth-child(2) {
+    opacity: 0;
+  }
+
+  .navbar-burger .line.active:nth-child(3) {
+    transform: rotate(-45deg) translate(7px, -7px);
+  }
+
+  .navbar-menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .navbar-menu li {
+    margin-bottom: 10px;
+  }
+
+  .navbar-menu li a {
+    color: #333;
+    text-decoration: none;
+  }
+
+  .navbar ul {
+    margin: 0;
+    margin-left: auto;
+    padding: 1px;
+    align-items: flex-start;
+    display: flex;
+    justify-content: center;
+  }
+
+  .close-icon {
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
+  }
+  .navbar-buttons {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+    margin-right: 1rem;
+  }
+  ul li a svg {
+    /* display: none; */
+  }
+}
