--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -76,7 +76,7 @@
 
 @media (max-width: 768px) {
   .projectImg {
-    max-width: 300px;
+    max-width: 100%;
     border-radius: 8px;
   }
   .grid-container {
