--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -51,7 +51,6 @@
   margin-left: 5px;
 }
 
-
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -71,10 +70,10 @@
 /* Theme dark */
 .app.dark #projects {
   border-radius: 8px;
-  background-color: #1b2533;;
+  background-color: #1b2533;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1300px) {
   .projectImg {
     max-width: 100%;
     border-radius: 8px;
@@ -85,3 +84,16 @@
     gap: 15px;
   }
 }
+
+/* @media (max-width: 900px) {
+  .projectImg {
+    object-fit: contain;
+    max-width: 100%;
+    border-radius: 8px;
+  }
+  .grid-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 15px;
+  }
+} */
